# egui_skia_auto_fallback_demo

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: custom_skia.rs  mod.rs
