[package]
edition = "2021"
name = "egui_skia_auto_fallback_demo"
version = "0.1.0"

[features]
skia_force_cpu = ["eframe/skia_force_cpu"]

[dependencies]
eframe = {git = "https://github.com/rustytsuki/egui", rev = "0f2a61d7", default-features = false, features = ["skia", "default_fonts"]}
egui_demo_lib = {git = "https://github.com/rustytsuki/egui", rev = "0f2a61d7"}
